fixing sonar reported naming and complexity pbs

--- a/demo/jupyter-notebook/Jupyter - API Access Demo.ipynb
+++ b/demo/jupyter-notebook/Jupyter - API Access Demo.ipynb
@@ -57,7 +57,7 @@
        "{'file': './sampleFile.pdf',\n",
        " 'config': './sampleConfig.json',\n",
        " 'status_code': 202,\n",
-       " 'server_response': '03a5ec93d322dec99e2887b1245ca3'}"
+       " 'server_response': '2b95967f2b1120ca597343a0f18cdc'}"
       ]
      },
      "execution_count": 3,
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "job = p.sendDocument('./sampleFile.pdf', './sampleConfig.json')\n",
+    "job = p.send_document('./sampleFile.pdf', './sampleConfig.json')\n",
     "jobId = job['server_response']\n",
     "job"
    ]
@@ -86,8 +86,8 @@
     {
      "data": {
       "text/plain": [
-       "{'request_id': '03a5ec93d322dec99e2887b1245ca3',\n",
-       " 'server_response': '{\"id\":\"03a5ec93d322dec99e2887b1245ca3\",\"json\":\"/api/v1/json/03a5ec93d322dec99e2887b1245ca3\",\"csv\":\"/api/v1/csv/03a5ec93d322dec99e2887b1245ca3\",\"text\":\"/api/v1/text/03a5ec93d322dec99e2887b1245ca3\",\"markdown\":\"/api/v1/markdown/03a5ec93d322dec99e2887b1245ca3\"}'}"
+       "{'request_id': '2b95967f2b1120ca597343a0f18cdc',\n",
+       " 'server_response': '{\"id\":\"2b95967f2b1120ca597343a0f18cdc\",\"json\":\"/api/v1/json/2b95967f2b1120ca597343a0f18cdc\",\"csv\":\"/api/v1/csv/2b95967f2b1120ca597343a0f18cdc\",\"text\":\"/api/v1/text/2b95967f2b1120ca597343a0f18cdc\",\"markdown\":\"/api/v1/markdown/2b95967f2b1120ca597343a0f18cdc\"}'}"
       ]
      },
      "execution_count": 4,
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "p.getStatus(jobId)"
+    "p.get_status(jobId)"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "txt_output = p.getText(jobId)['server_response']"
+    "txt_output = p.get_text(jobId)['server_response']"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "md_output = p.getMarkdown(jobId)['server_response']"
+    "md_output = p.get_markdown(jobId)['server_response']"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_output = p.getJson(jobId)['server_response']"
+    "json_output = p.get_json(jobId)['server_response']"
    ]
   },
   {
@@ -188,23 +188,7 @@
     }
    ],
    "source": [
-    "pa.getTexts(page_number=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get tables on the first page as pandas dataframes - TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pa.getTables(page_number=1)"
+    "pa.get_texts(page_number=1)"
    ]
   }
  ],
