setting out the skelet. for the pypi package build

--- a/demo/python-client/jupyter-demo.ipynb
+++ b/demo/python-client/jupyter-demo.ipynb
@@ -57,7 +57,7 @@
        "{'file': './sampleFile.pdf',\n",
        " 'config': './sampleConfig.json',\n",
        " 'status_code': 202,\n",
-       " 'server_response': '03a5ec93d322dec99e2887b1245ca3'}"
+       " 'server_response': '4d9349e056e83282210aec991c655c'}"
       ]
      },
      "execution_count": 3,
@@ -86,8 +86,8 @@
     {
      "data": {
       "text/plain": [
-       "{'request_id': '03a5ec93d322dec99e2887b1245ca3',\n",
-       " 'server_response': '{\"id\":\"03a5ec93d322dec99e2887b1245ca3\",\"json\":\"/api/v1/json/03a5ec93d322dec99e2887b1245ca3\",\"csv\":\"/api/v1/csv/03a5ec93d322dec99e2887b1245ca3\",\"text\":\"/api/v1/text/03a5ec93d322dec99e2887b1245ca3\",\"markdown\":\"/api/v1/markdown/03a5ec93d322dec99e2887b1245ca3\"}'}"
+       "{'request_id': '4d9349e056e83282210aec991c655c',\n",
+       " 'server_response': '{\"id\":\"4d9349e056e83282210aec991c655c\",\"json\":\"/api/v1/json/4d9349e056e83282210aec991c655c\",\"csv\":\"/api/v1/csv/4d9349e056e83282210aec991c655c\",\"text\":\"/api/v1/text/4d9349e056e83282210aec991c655c\",\"markdown\":\"/api/v1/markdown/4d9349e056e83282210aec991c655c\"}'}"
       ]
      },
      "execution_count": 4,
@@ -160,8 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import parsr_output_interpreter as p\n",
-    "pa = p.ParsrOutputInterpreter(json_output)"
+    "import parsr_output_interpreter as poi\n",
+    "pa = poi.ParsrOutputInterpreter(json_output)"
    ]
   },
   {
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "'Document Parsing\\n\\nA Document Parsing system\\n\\nOfficial Website (work in progress)\\n\\nhttps://axatechlab.github.io/AXA-AEL-pdfparser/\\n\\nAPI\\n\\nTo start the API server, just run:\\n\\nnpm run start:api\\n\\nThe documentation is <a href=\"docs/api.html\">here.</a>\\n\\nBinary dependencies for Linux and Mac OS X\\n\\nWe use qpdf, mupdf-tools, imagemagick and pdf2json to do process pdf files,extract fonts and convert pdf to json structure. your machine prior to use docparser.\\n\\nYou must install this tools on\\n\\npacman -S qpdf mupdf-tools pdf2json imagemagickapt-get install \\n\\nOn OS X:\\n\\nqpdf pdf2json imagemagick\\n\\n# # \\n\\nbrew install \\n\\nTesseract\\n\\nqpdf mupdf-tools pdf2json \\n\\n<a href=\"https://github.com/tesseract-ocr/tesseract/\">https://github.com/tesseract-ocr/tesseract/</a>\\n\\nimagemagick\\n\\nOnly used if you give an image to the pipeline.\\n\\nDuckling\\n\\nArch LinuxDebian based \\n\\nFollow this guide: <a href=\"https://github.com/facebook/duckling#duckling-\">https://github.com/facebook/duckling#duckling-</a>\\n\\nDependencies (Windows)\\n\\nlinux \\n\\nWe recommand using Chocolatey to install dependencies. It makes things muchmore easier to manage.\\n\\n1\\n\\ndistro\\n\\n'"
+       "'DocumentParsing\\n\\nADocumentParsingsystem\\n\\nOfficialWebsite(workinprogress)\\n\\nhttps://axatechlab.github.io/AXA-AEL-pdfparser/\\n\\nAPI\\n\\nTostarttheAPIsever,justrun:npmrunstart:apiThedocumentationishere.\\n\\nBinarydependenciesforLinuxandMacOSX\\n\\nWeuseqpf,mupdf-tols,imagemagickandpdf2jsontodoprocespdffiles,extractfontsandconvertpdftojsonstructure.Youmustinstallthistoolsonyourmachinepriortousedocparser.pacman-Sqpdfmupdf-toolspdf2jsonimagemagickapt-getinstallqpdfpdf2jsonimagemagickOnOSX:brewinstallqpdfmupdf-toolspdf2jsonimagemagick\\n\\n#ArchLinux#Debianbasedlinuxdistro\\n\\nTesseract\\n\\nhttps://github.com/tesseract-ocr/tesseract/Onlyusedifyougiveanimagetothepipeline.\\n\\nDuckling\\n\\nFollowthisguide:https://github.com/facebook/duckling#duckling-\\n\\nDependencies(Windows)\\n\\nWerecommandusingChocolateytoinstalldependencies.Itmakesthingsmuchmoreeasiertomanage.\\n\\n1\\n\\n'"
       ]
      },
      "execution_count": 9,
@@ -224,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
