[Document diff] Jupyter interface, bugfix, samples

--- a/demo/jupyter-notebook/parsr-jupyter-notebook.ipynb
+++ b/demo/jupyter-notebook/parsr-jupyter-notebook.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "from parsr_client import ParserClient\n",
-    "from output_renderer import RenderMarkdown, RenderBigJSON, RenderJSON"
+    "from output_renderer import RenderMarkdown, RenderBigJSON, RenderJSON, RenderHTML"
    ]
   },
   {
@@ -73,7 +73,7 @@
       "{\n",
       "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"./sampleConfig.json\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./sampleFile.pdf\"\u001b[39;49;00m,\n",
-      "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"fbbd871aaea4afd61536a9288066b6\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"ed7d36ebd3438fee546587ebd6f8a3\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
       "}\n",
       "\n"
@@ -82,7 +82,7 @@
     {
      "data": {
       "text/plain": [
-       "<output_renderer.RenderJSON at 0x10aaa0310>"
+       "<output_renderer.RenderJSON at 0x7fc21bbeea58>"
       ]
      },
      "execution_count": 3,
@@ -149,9 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -217,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -440,9 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -478,35 +472,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interpret the JSON output locally"
+    "## Example: Difference between two PDFs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"./sampleConfig.json\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./README0.pdf\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"8536e41125c7599c2446dc2b5fe9a6\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
+      "}\n",
+      "\n",
+      "{\n",
+      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"./sampleConfig.json\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./README1.pdf\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"657c3e5569ced0c3bd37526b935c55\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
+      "}\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<output_renderer.RenderJSON at 0x7f6b35dbda58>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from parsr_output_interpreter import ParsrOutputInterpreter\n",
-    "\n",
-    "parsr_interpreter = ParsrOutputInterpreter(\n",
-    "    parsr.get_json()\n",
-    ")"
+    "job1 = parsr.send_document(\n",
+    "    file='./README0.pdf',\n",
+    "    config='./sampleConfig.json',\n",
+    "    save_request_id=False)\n",
+    "RenderJSON(job1)\n",
+    "job2 = parsr.send_document(\n",
+    "    file='./README1.pdf',\n",
+    "    config='./sampleConfig.json',\n",
+    "    save_request_id=False)\n",
+    "RenderJSON(job2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span># Turn your documents into data!&para;<br>&para;<br>**Parsr,** is a minimal-footprint document (image, pdf) cleaning, parsing and extraction toolchain which generates readily available, organized and usable data for data scientists and developers.  &para;<br>It provides users with clean structured and label-enriched information set for ready-to-use applications ranging from data entry and document analysis au- tomation, archival, and many others.  &para;<br>Currently, Parsr can perform:&para;<br>&para;<br>1. Document Hierarchy Regeneration - Words, Lines and Paragraphs&para;<br>2. Headings Detection&para;<br>3.</span><ins style=\"background:#e6ffe6;\"> Table Detection and Reconstruction&para;<br>4. Lists Detection&para;<br>5. Text Order Detection&para;<br>6. Named Entity Recognition (Dates, Percentages, etc)&para;<br>7.</ins><span> Key-Value Pair Detection (for the extraction of speciﬁc form-based entries)&para;<br></span><del style=\"background:#ffe6e6;\">4</del><ins style=\"background:#e6ffe6;\">8</ins><span>. Page Number Detection&para;<br></span><del style=\"background:#ffe6e6;\">5</del><ins style=\"background:#e6ffe6;\">9</ins><span>. Header-Footer Detection&para;<br></span><del style=\"background:#ffe6e6;\">6</del><ins style=\"background:#e6ffe6;\">10</ins><span>. Link Detection&para;<br></span><del style=\"background:#ffe6e6;\">7</del><ins style=\"background:#e6ffe6;\">11</ins><span>. Heading Detection&para;<br></span><del style=\"background:#ffe6e6;\">8</del><ins style=\"background:#e6ffe6;\">12</ins><span>. Whitespace Removal  &para;<br>Parsr can generate the following output formats:&para;<br></span><del style=\"background:#ffe6e6;\">9</del><ins style=\"background:#e6ffe6;\">13</ins><span>. JSON&para;<br>1</span><del style=\"background:#ffe6e6;\">0</del><ins style=\"background:#e6ffe6;\">4</ins><span>. Markdown&para;<br>1</span><del style=\"background:#ffe6e6;\">1</del><ins style=\"background:#e6ffe6;\">5</ins><span>. Text&para;<br>1</span><del style=\"background:#ffe6e6;\">2</del><ins style=\"background:#e6ffe6;\">6</ins><span>. CSV (for tables), or Pandas Dataframes (see here)&para;<br>1</span><del style=\"background:#ffe6e6;\">3</del><ins style=\"background:#e6ffe6;\">7</ins><span>. PDF&para;<br>&para;<br>## Table of Contents&para;<br>&para;<br>- Turn your documents into data!&para;<br>- Table of Contents&para;<br>- Getting Started&para;<br>- Installation&para;<br>- Usage&para;<br>- Documentation&para;<br>- Contribute&para;<br>- Third Party Licenses&para;<br>- License&para;<br>&para;<br></span><ins style=\"background:#e6ffe6;\">---&para;<br>&para;<br></ins><span>## Getting Started&para;<br>&para;<br>### Installation&para;<br>&para;<br>- *The advanced installation guide is available here –*</span><del style=\"background:#ffe6e6;\">&para;<br>&para;<br>---&para;<br></del><ins style=\"background:#e6ffe6;\">  </ins><span>&para;<br>The quickest way to install and run the Parsr API is through the docker image: docker pull axarev/parsr  &para;<br>If you also wish to install the GUI for sending documents and visualising results</span><del style=\"background:#ffe6e6;\">, execute the following:  &para;<br></del><ins style=\"background:#e6ffe6;\">: </ins><span>docker pull axarev/parsr-ui-localhost  &para;<br>Note: Parsr can also be installed bare-metal (not via Docker containers), the procedure for which is documented in the installation guide.&para;<br>&para;<br>### Usage&para;<br>&para;<br>- *The advanced usage guide is available here –*  &para;<br>To run the API, issue:  &para;<br>docker run -p 3001:3001 axarev/parsr  &para;<br></span><ins style=\"background:#e6ffe6;\">which will launch it on [http://localhost:3001.](http://localhost:3001.)  &para;<br>Consult the documentation on the usage of the API.  &para;<br></ins><span>To use the **Jupyter Notebook** and the **python** interface to the Parsr API, follow here.  &para;<br>To use the GUI tool (the API needs to already be running), issue: docker run -t -p 8080:80 axarev/parsr-ui-localhost:latest Then, access it through [http://localhost:8080.](http://localhost:8080.)  &para;<br></span><ins style=\"background:#e6ffe6;\">Refer to the Conﬁguration documentation to interpret the conﬁgurable options in the GUI viewer.  &para;<br></ins><span>The API based usage and the command line usage are documented in the advanced usage guide.&para;<br>&para;<br>1. To use the **Jupyter Notebook** and the **python** interface to the Parsr API, follow here.&para;<br>2. To use the GUI tool (the API needs to already be running), issue: docker run -t -p 8080:80 axarev/parsr-ui-localhost:latest Then, access it through [http://localhost:8080.](http://localhost:8080.)  &para;<br></span><ins style=\"background:#e6ffe6;\">Refer to the Conﬁguration documentation to interpret the conﬁgurable options in the GUI viewer.  &para;<br></ins><span>The API based usage and the command line usage are documented in the advanced usage guide.&para;<br>&para;<br>## Documentation&para;<br>&para;<br>All documentation ﬁles can be found here.&para;<br>&para;<br>## Contribute&para;<br>&para;<br>Please refer to the contribution guidelines.&para;<br>&para;<br></span><ins style=\"background:#e6ffe6;\">---&para;<br>&para;<br></ins><span>## Third Party Licenses&para;<br>&para;<br>Third Party Libraries licenses for its dependencies:&para;<br>&para;<br>1. **QPDF:** Apache [http://qpdf.sourceforge.net](http://qpdf.sourceforge.net)&para;<br>2. **GraphicsMagick:** MIT [http://www.graphicsmagick.org/index.html](http://www.graphicsmagick.org/index.html)&para;<br>3. **ImageMagick:** Apache 2.0 [https://imagemagick.org/script/license.php](https://imagemagick.org/script/license.php)&para;<br>4. **Pdfminer.six:** MIT [https://github.com/pdfminer/pdfminer.six/blob/master/LICENSE](https://github.com/pdfminer/pdfminer.six/blob/master/LICENSE)&para;<br></span><del style=\"background:#ffe6e6;\">&para;<br>---&para;<br>&para;<br></del><span>5. **Tesseract:** Apache 2.0 [https://github.com/tesseract-ocr/tesseract](https://github.com/tesseract-ocr/tesseract)&para;<br>6. **Camelot:** MIT [https://github.com/camelot-dev/camelot](https://github.com/camelot-dev/camelot)&para;<br>7. **MuPDF** (Optional dependency): AGPL [https://mupdf.com/license.html](https://mupdf.com/license.html)&para;<br>8. **Pandoc** (Optional dependency): GPL [https://github.com/jgm/pandoc](https://github.com/jgm/pandoc)&para;<br>&para;<br>## License&para;<br>&para;<br>Copyright 2019 AXA Group Operations S.A.  &para;<br>Licensed under the Apache 2.0 license (see the LICENSE ﬁle).&para;<br>&para;<br></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "htmldiff = parsr.compare_pdfs(\n",
+    "        job1['server_response'],\n",
+    "        job2['server_response'],\n",
+    "        True,\n",
+    "    )\n",
+    "RenderHTML(htmldiff)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example : Get all the text on Page 1"
+    "## Example: Interpret the JSON output locally and get all text on Page 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -537,18 +592,17 @@
     }
    ],
    "source": [
+    "from parsr_output_interpreter import ParsrOutputInterpreter\n",
+    "\n",
+    "parsr_interpreter = ParsrOutputInterpreter(\n",
+    "    parsr.get_json()\n",
+    ")\n",
+    "\n",
     "t = parsr_interpreter.get_text(\n",
     "    page_number=1\n",
     ")\n",
     "print(t)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -567,9 +621,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
