Config file used should come from the repo default

--- a/demo/jupyter-notebook/parsr-jupyter-notebook.ipynb
+++ b/demo/jupyter-notebook/parsr-jupyter-notebook.ipynb
@@ -76,7 +76,7 @@
       ">> Progress percentage: 0\n",
       ">> Job done!\n",
       "{\n",
-      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"./sampleConfig.json\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./sampleFile.pdf\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"6b7b07a630bc4101e39cbd16daa2f8\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
@@ -98,7 +98,7 @@
    "source": [
     "job = parsr.send_document(\n",
     "    file='./sampleFile.pdf',\n",
-    "    config='./sampleConfig.json',\n",
+    "    config='../../server/defaultConfig.json',\n",
     "    document_name='Sample File2',\n",
     "    wait_till_finished=True,\n",
     "    save_request_id=True,\n",
@@ -451,7 +451,7 @@
       ">> Progress percentage: 0\n",
       ">> Job done!\n",
       "{\n",
-      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"./sampleConfig.json\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./README0.pdf\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"cb4efd3e235596e6cb346d97235da8\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
@@ -463,7 +463,7 @@
       ">> Progress percentage: 0\n",
       ">> Job done!\n",
       "{\n",
-      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"./sampleConfig.json\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./README1.pdf\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"450c9348c2d61f3d15af0c00ae99d1\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
@@ -487,7 +487,7 @@
     "job1 = parsr.send_document(\n",
     "    document_name='Readme',\n",
     "    file='./README0.pdf',\n",
-    "    config='./sampleConfig.json',\n",
+    "    config='../../server/defaultConfig.json',\n",
     "    wait_till_finished=True,\n",
     ")\n",
     "RenderJSON(job1)\n",
@@ -496,7 +496,7 @@
     "job2 = parsr.send_document(\n",
     "    document_name='Readme',\n",
     "    file='./README1.pdf',\n",
-    "    config='./sampleConfig.json',\n",
+    "    config='../../server/defaultConfig.json',\n",
     "    wait_till_finished=True,\n",
     ")\n",
     "RenderJSON(job2)"
