WIP: moving things around into modules

--- a/demo/jupyter_demo/parsr-jupyter-notebook.ipynb
+++ b/demo/jupyter_demo/parsr-jupyter-notebook.ipynb
@@ -30,11 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-a7d9bee9eab9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython_client\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mparsr_client\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0moutput_renderer\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRenderMarkdown\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRenderJSON\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRenderHTML\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
    "source": [
-    "from parsr_client import ParserClient\n",
+    "from ..python_client import parsr_client\n",
     "from output_renderer import RenderMarkdown, RenderJSON, RenderHTML"
    ]
   },
@@ -49,7 +61,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ParserClient' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-3f3a90342e3a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mparsr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mParserClient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'localhost:3001'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ParserClient' is not defined"
+     ]
+    }
+   ],
    "source": [
     "parsr = ParserClient('localhost:3001')"
    ]
@@ -1415,7 +1439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
