python client version bump in requirements

--- a/demo/parsr-jupyter-demo/notebook.ipynb
+++ b/demo/parsr-jupyter-demo/notebook.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from parsr_client.parsr_client import ParsrClient as client\n",
+    "from parsr_client import ParsrClient as client\n",
     "from output_renderer import RenderMarkdown, RenderJSON, RenderHTML"
    ]
   },
@@ -1440,7 +1440,7 @@
     }
    ],
    "source": [
-    "from parsr_client.parsr_output_interpreter import ParsrOutputInterpreter as ParsrOutputInterpreter\n",
+    "from parsr_client import ParsrOutputInterpreter as ParsrOutputInterpreter\n",
     "\n",
     "parsr_interpreter = ParsrOutputInterpreter(\n",
     "    parsr.get_json()\n",
