Updating the argument names for file and config when sending document
Following the documentation on the parsr python client
https://github.com/axa-group/Parsr/tree/master/clients/python-client
the argument for the send_document function should be "file_path" instead of "file" and  and "config_path" instead of "config"

--- a/demo/parsr-jupyter-demo/notebook.ipynb
+++ b/demo/parsr-jupyter-demo/notebook.ipynb
@@ -73,8 +73,8 @@
       "> Polling server for the job ee50fbc49bb9354163dc901d4233cb...\n",
       ">> Job done!\n",
       "{\n",
-      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
-      "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./sampleFile.pdf\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"config_path\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"file_path\"\u001b[39;49;00m: \u001b[33m\"./sampleFile.pdf\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"ee50fbc49bb9354163dc901d4233cb\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
       "}\n",
@@ -94,8 +94,8 @@
    ],
    "source": [
     "job = parsr.send_document(\n",
-    "    file='./sampleFile.pdf',\n",
-    "    config='../../server/defaultConfig.json',\n",
+    "    file_path='./sampleFile.pdf',\n",
+    "    config_path='../../server/defaultConfig.json',\n",
     "    document_name='Sample File2',\n",
     "    wait_till_finished=True,\n",
     "    save_request_id=True,\n",
@@ -445,8 +445,8 @@
       "> Polling server for the job 576f9a029a95b68aa2d0ed5795aa49...\n",
       ">> Job done!\n",
       "{\n",
-      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
-      "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./README0.pdf\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"config_path\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"file_path\"\u001b[39;49;00m: \u001b[33m\"./README0.pdf\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"576f9a029a95b68aa2d0ed5795aa49\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
       "}\n",
@@ -454,8 +454,8 @@
       "> Polling server for the job 1ed35e7ccbcebbf1eb29fbd36a2dca...\n",
       ">> Job done!\n",
       "{\n",
-      "    \u001b[94m\"config\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
-      "    \u001b[94m\"file\"\u001b[39;49;00m: \u001b[33m\"./README1.pdf\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"config_path\"\u001b[39;49;00m: \u001b[33m\"../../server/defaultConfig.json\"\u001b[39;49;00m,\n",
+      "    \u001b[94m\"file_path\"\u001b[39;49;00m: \u001b[33m\"./README1.pdf\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"server_response\"\u001b[39;49;00m: \u001b[33m\"1ed35e7ccbcebbf1eb29fbd36a2dca\"\u001b[39;49;00m,\n",
       "    \u001b[94m\"status_code\"\u001b[39;49;00m: \u001b[34m202\u001b[39;49;00m\n",
       "}\n",
@@ -477,8 +477,8 @@
     "# ------------------------- Send the first version\n",
     "job1 = parsr.send_document(\n",
     "    document_name='Readme',\n",
-    "    file='./README0.pdf',\n",
-    "    config='../../server/defaultConfig.json',\n",
+    "    file_path='./README0.pdf',\n",
+    "    config_path='../../server/defaultConfig.json',\n",
     "    wait_till_finished=True,\n",
     ")\n",
     "RenderJSON(job1)\n",
@@ -486,8 +486,8 @@
     "# -------------------------- Send the second revision\n",
     "job2 = parsr.send_document(\n",
     "    document_name='Readme',\n",
-    "    file='./README1.pdf',\n",
-    "    config='../../server/defaultConfig.json',\n",
+    "    file_path='./README1.pdf',\n",
+    "    config_path='../../server/defaultConfig.json',\n",
     "    wait_till_finished=True,\n",
     ")\n",
     "RenderJSON(job2)"
